--- a/ressources/CSS/Style.css
+++ b/ressources/CSS/Style.css
@@ -277,7 +277,7 @@ header {
 .galerie-img {
     display:block;
     background-size: cover;
-    background-position: top-center;
+    background-position: center;
     background-repeat: no-repeat;
     height: 300px;
     border-radius: 10px;
