--- a/ressources/CSS/Style.css
+++ b/ressources/CSS/Style.css
@@ -287,10 +287,11 @@ header {
 }
 
 .galerie-title {
-    position: absolute;
-    bottom: 20px;
-    left: 30px;
-    right:30px;
+    text-align: center;
+    /* position: absolute; */
+    /* bottom: 20px; */
+    /* left: 30px; */
+    /* right:30px; */
 }
 
 .galerie-title h4 {
